--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/Minecraft")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Minecraft")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="MinecraftGameModeBase")
+MaximumLoopIterationCount=2000000
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -16,4 +17,3 @@ GameDefaultMap=/Game/Maps/NewMap.NewMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 Compiler=VisualStudio2019
-
