Option Menu with Language

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -21,12 +21,36 @@ Compiler=VisualStudio2019
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
 HardwareCursors=()
-SoftwareCursors=((Default, /Game/GUI/UI_Cursor.UI_Cursor_C),(TextEditBeam, /Game/GUI/UI_CursorTextEdit.UI_CursorTextEdit_C))
+SoftwareCursors=((Default, /Game/GUI/UI_Cursor.UI_Cursor_C),(TextEditBeam, /Game/GUI/UI_CursorTextEdit.UI_CursorTextEdit_C),(ResizeLeftRight, /Game/GUI/UI_Cursor.UI_Cursor_C),(ResizeUpDown, /Game/GUI/UI_Cursor.UI_Cursor_C),(ResizeSouthEast, /Game/GUI/UI_Cursor.UI_Cursor_C),(ResizeSouthWest, /Game/GUI/UI_Cursor.UI_Cursor_C),(CardinalCross, /Game/GUI/UI_Cursor.UI_Cursor_C),(Crosshairs, /Game/GUI/UI_Cursor.UI_Cursor_C),(Hand, /Game/GUI/UI_Cursor.UI_Cursor_C),(GrabHand, /Game/GUI/UI_Cursor.UI_Cursor_C),(GrabHandClosed, /Game/GUI/UI_Cursor.UI_Cursor_C),(SlashedCircle, /Game/GUI/UI_Cursor.UI_Cursor_C),(EyeDropper, /Game/GUI/UI_Cursor.UI_Cursor_C))
 ApplicationScale=1.000000
 UIScaleRule=ShortestSide
 CustomScalingRuleClass=None
 UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000,PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant),ExternalCurve=None)
 bAllowHighDPIInGameMode=False
 bLoadWidgetsOnDedicatedServer=True
+
+[/Script/Engine.AudioSettings]
+DefaultSoundClassName=/Engine/EngineSounds/Master.Master
+DefaultMediaSoundClassName=/Engine/EngineSounds/Master.Master
+DefaultSoundConcurrencyName=None
+DefaultBaseSoundMix=None
+VoiPSoundClass=None
+VoiPSampleRate=Low16000Hz
+VoipBufferingDelay=0.200000
+bEnableLegacyReverb=False
+MaximumConcurrentStreams=2
+GlobalMinPitchScale=0.400000
+GlobalMaxPitchScale=2.000000
++QualityLevels=(DisplayName=NSLOCTEXT("[/Script/Engine]", "92FC9D8D4D8C7941FEE11AB076B0C514", "Epic"),MaxChannels=64)
++QualityLevels=(DisplayName=NSLOCTEXT("[/Script/Engine]", "BC6348D94CFB3C4DE444328AD4F86267", "High"),MaxChannels=32)
++QualityLevels=(DisplayName=NSLOCTEXT("[/Script/Engine]", "2C86EE554DBFA90EAD448BADA4CD105E", "Medium"),MaxChannels=16)
++QualityLevels=(DisplayName=NSLOCTEXT("[/Script/Engine]", "800355314CB963B8D5667D837E0F6EE6", "Low"),MaxChannels=8)
+bAllowPlayWhenSilent=True
+bDisableMasterEQ=False
+bAllowCenterChannel3DPanning=False
+NumStoppingSources=8
+PanningMethod=Linear
+MonoChannelUpmixMethod=Linear
+DialogueFilenameFormat="{DialogueGuid}_{ContextId}"
 
 
