--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -53,4 +53,8 @@ PanningMethod=Linear
 MonoChannelUpmixMethod=Linear
 DialogueFilenameFormat="{DialogueGuid}_{ContextId}"
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+bForceRebuildOnLoad=True
+CellSize=16.000000
 
